[gd_scene load_steps=20 format=2]

[ext_resource path="res://levels/level_mago/level_world.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/EmilysCandy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://levels/level_mago/mago_prueba.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.34497, 13.5655 )

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/cherry_icon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "sucked"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 5.85356

[sub_resource type="CircleShape2D" id=16]
radius = 19.558

[node name="mago_prueba" type="Node2D"]
script = ExtResource( 3 )

[node name="level_prueba" parent="." instance=ExtResource( 1 )]
script = null

[node name="World" parent="level_prueba" index="0"]
tile_data = PoolIntArray( -3014638, 2, 3, -3014612, 2, 3, -2949102, 2, 65539, -2949077, 2, 4, -2949076, 2, 196615, -2883566, 2, 65539, -2883541, 2, 65539, -2818030, 2, 65539, -2818005, 2, 65539, -2752494, 2, 65539, -2752469, 2, 65539, -2686958, 2, 65539, -2686933, 2, 65539, -2621422, 2, 65539, -2621397, 2, 131075, -2555886, 2, 65539, -2555860, 2, 3, -2490350, 2, 196612, -2490349, 2, 7, -2490324, 2, 65539, -2424813, 2, 65539, -2424788, 2, 65539, -2359277, 2, 65539, -2359252, 2, 65539, -2293741, 2, 65539, -2293716, 2, 65539, -2228205, 2, 65539, -2228180, 2, 65539, -2162669, 2, 65539, -2162644, 2, 65539, -2097134, 2, 0, -2097133, 2, 131079, -2097108, 2, 65539, -2031598, 2, 65536, -2031597, 2, 65538, -2031572, 2, 65539, -1966062, 2, 65536, -1966061, 2, 65538, -1966036, 2, 65539, -1900526, 2, 65536, -1900525, 2, 65538, -1900500, 2, 65539, -1834990, 2, 65536, -1834989, 2, 65538, -1834964, 2, 65539, -1769454, 2, 131072, -1769453, 2, 65543, -1769428, 2, 65539, -1703917, 2, 65539, -1703892, 2, 65539, -1638381, 2, 65539, -1638356, 2, 65539, -1572845, 2, 65539, -1572820, 2, 65539, -1507309, 2, 65539, -1507284, 2, 65539, -1441773, 2, 65539, -1441748, 2, 196612, -1441747, 2, 7, -1376237, 2, 65539, -1376211, 2, 65539, -1310701, 2, 65539, -1310675, 2, 65539, -1245165, 2, 65539, -1245139, 2, 65539, -1179629, 2, 65539, -1179603, 2, 65539, -1114093, 2, 65539, -1114067, 2, 65539, -1048557, 2, 65539, -1048531, 2, 65539, -983021, 2, 65539, -982995, 2, 65539, -917485, 2, 65539, -917459, 2, 65539, -851949, 2, 65539, -851923, 2, 65539, -786413, 2, 65539, -786387, 2, 65539, -720877, 2, 65539, -720851, 2, 131075, -655341, 2, 65539, -655314, 2, 3, -589805, 2, 65539, -589778, 2, 65539, -524269, 2, 65539, -524242, 2, 65539, -458733, 2, 65539, -458706, 2, 65539, -393197, 2, 65539, -393170, 2, 65539, -327661, 2, 65539, -327634, 2, 65539, -262125, 2, 65539, -262098, 2, 65539, -196589, 2, 65539, -196562, 2, 65539, -131053, 2, 65539, -131026, 2, 65539, -65517, 2, 65539, -65512, 2, 196608, -65511, 2, 196609, -65510, 2, 8, -65509, 2, 196610, -65498, 2, 196608, -65497, 2, 196609, -65496, 2, 196609, -65495, 2, 196610, -65490, 2, 65539, 19, 2, 65539, 26, 2, 65539, 46, 2, 65539, 65555, 2, 262148, 65556, 2, 196610, 65562, 2, 65539, 65582, 2, 65539, 131091, 2, 65539, 131098, 2, 65539, 131103, 2, 196608, 131104, 2, 8, 131105, 2, 196610, 131116, 2, 3, 131118, 2, 65539, 196627, 2, 65539, 196634, 2, 65539, 196640, 2, 65539, 196646, 2, 4, 196647, 2, 196610, 196652, 2, 65539, 196654, 2, 65539, 262163, 2, 65539, 262169, 2, 196608, 262170, 2, 262151, 262176, 2, 65539, 262182, 2, 65539, 262188, 2, 65539, 262190, 2, 65539, 327699, 2, 65539, 327706, 2, 262148, 327707, 2, 196610, 327712, 2, 65539, 327717, 2, 196608, 327718, 2, 262151, 327723, 2, 196608, 327724, 2, 262151, 327726, 2, 196612, 327727, 2, 7, 393235, 2, 65539, 393242, 2, 65539, 393248, 2, 65539, 393254, 2, 65539, 393260, 2, 65539, 393263, 2, 65539, 458771, 2, 262148, 458772, 2, 196610, 458778, 2, 65539, 458783, 2, 196608, 458784, 2, 262152, 458785, 2, 196610, 458790, 2, 262148, 458791, 2, 196610, 458796, 2, 65539, 458799, 2, 65539, 524307, 2, 65539, 524314, 2, 65539, 524320, 2, 65539, 524326, 2, 65539, 524332, 2, 65539, 524335, 2, 65539, 589843, 2, 65539, 589850, 2, 196612, 589851, 2, 196610, 589856, 2, 131075, 589861, 2, 196608, 589862, 2, 196615, 589867, 2, 196608, 589868, 2, 196615, 589871, 2, 65539, 655379, 2, 65539, 655383, 2, 196608, 655384, 2, 196609, 655385, 2, 196610, 655407, 2, 65539, 720915, 2, 65539, 720943, 2, 65539, 786451, 2, 65539, 786472, 2, 196608, 786473, 2, 196610, 786479, 2, 65539, 851987, 2, 262148, 851988, 2, 196610, 852015, 2, 65539, 917523, 2, 65539, 917532, 2, 196608, 917533, 2, 196609, 917534, 2, 196609, 917535, 2, 196609, 917536, 2, 196609, 917537, 2, 196609, 917538, 2, 196609, 917539, 2, 196609, 917540, 2, 196610, 917551, 2, 65539, 983059, 2, 65539, 983087, 2, 65539, 1048595, 2, 65539, 1048623, 2, 65539, 1114131, 2, 65539, 1114135, 2, 196608, 1114136, 2, 196609, 1114137, 2, 196610, 1114153, 2, 196608, 1114154, 2, 196609, 1114155, 2, 196610, 1114159, 2, 65539, 1179667, 2, 65539, 1179695, 2, 65539, 1245203, 2, 65539, 1245231, 2, 65539, 1310739, 2, 262148, 1310740, 2, 196610, 1310749, 2, 196608, 1310750, 2, 196609, 1310751, 2, 196609, 1310752, 2, 196609, 1310753, 2, 196609, 1310754, 2, 196609, 1310755, 2, 196609, 1310756, 2, 196610, 1310766, 2, 196608, 1310767, 2, 262151, 1376275, 2, 65539, 1376303, 2, 65539, 1441811, 2, 65539, 1441839, 2, 65539, 1507347, 2, 65539, 1507350, 2, 196608, 1507351, 2, 196609, 1507352, 2, 196610, 1507370, 2, 196608, 1507371, 2, 196609, 1507372, 2, 196610, 1507375, 2, 65539, 1572883, 2, 65539, 1572911, 2, 65539, 1638419, 2, 65539, 1638447, 2, 131075, 1703955, 2, 65539, 1703982, 2, 3, 1769491, 2, 196612, 1769492, 2, 7, 1769498, 2, 196608, 1769499, 2, 196609, 1769500, 2, 196609, 1769501, 2, 196610, 1769505, 2, 196608, 1769506, 2, 196609, 1769507, 2, 196609, 1769508, 2, 196610, 1769512, 2, 196608, 1769513, 2, 196609, 1769514, 2, 196609, 1769515, 2, 196610, 1769518, 2, 65539, 1835028, 2, 65539, 1835054, 2, 65539, 1900564, 2, 65539, 1900590, 2, 65539, 1966100, 2, 262148, 1966101, 2, 196609, 1966102, 2, 196610, 1966126, 2, 65539, 2031636, 2, 65539, 2031654, 2, 196608, 2031655, 2, 196610, 2031661, 2, 4, 2031662, 2, 196615, 2097172, 2, 65539, 2097197, 2, 65539, 2162708, 2, 65539, 2162717, 2, 196608, 2162718, 2, 196610, 2162722, 2, 196608, 2162723, 2, 196610, 2162733, 2, 65539, 2228244, 2, 65539, 2228267, 2, 196608, 2228268, 2, 196609, 2228269, 2, 262151, 2293780, 2, 65539, 2293805, 2, 65539, 2359316, 2, 65539, 2359341, 2, 65539, 2424852, 2, 65539, 2424855, 2, 196608, 2424856, 2, 196609, 2424857, 2, 196609, 2424858, 2, 196610, 2424869, 2, 196608, 2424870, 2, 196609, 2424871, 2, 196609, 2424872, 2, 196610, 2424877, 2, 65539, 2490388, 2, 65539, 2490413, 2, 65539, 2555923, 2, 4, 2555924, 2, 196615, 2555949, 2, 65539, 2621459, 2, 65539, 2621470, 2, 196608, 2621471, 2, 196609, 2621472, 2, 196609, 2621473, 2, 196609, 2621474, 2, 196610, 2621485, 2, 65539, 2686995, 2, 65539, 2687021, 2, 65539, 2752531, 2, 65539, 2752557, 2, 131075, 2818067, 2, 65539, 2818094, 2, 3, 2883603, 2, 65539, 2883608, 2, 0, 2883609, 2, 1, 2883610, 2, 1, 2883611, 2, 2, 2883621, 2, 0, 2883622, 2, 1, 2883623, 2, 1, 2883624, 2, 2, 2883630, 2, 65539, 2949139, 2, 262148, 2949140, 2, 196609, 2949141, 2, 196609, 2949142, 2, 196609, 2949143, 2, 196609, 2949144, 2, 196614, 2949145, 2, 131073, 2949146, 2, 131073, 2949147, 2, 196613, 2949148, 2, 196609, 2949149, 2, 196609, 2949150, 2, 196609, 2949151, 2, 196609, 2949152, 2, 196609, 2949153, 2, 196609, 2949154, 2, 196609, 2949155, 2, 196609, 2949156, 2, 196609, 2949157, 2, 196614, 2949158, 2, 131073, 2949159, 2, 131073, 2949160, 2, 196613, 2949161, 2, 196609, 2949162, 2, 196609, 2949163, 2, 196609, 2949164, 2, 196609, 2949165, 2, 196609, 2949166, 2, 262151, 3014675, 2, 65539, 3014702, 2, 65539, 3080211, 2, 65539, 3080238, 2, 65539, 3145747, 2, 65539, 3145751, 2, 196608, 3145752, 2, 196609, 3145753, 2, 196609, 3145754, 2, 196609, 3145755, 2, 196609, 3145756, 2, 196609, 3145757, 2, 196609, 3145758, 2, 196609, 3145759, 2, 196609, 3145760, 2, 196609, 3145761, 2, 196609, 3145762, 2, 196609, 3145763, 2, 196609, 3145764, 2, 196609, 3145765, 2, 196609, 3145766, 2, 196609, 3145767, 2, 196609, 3145768, 2, 196609, 3145769, 2, 7, 3145774, 2, 65539, 3211283, 2, 262148, 3211284, 2, 196609, 3211285, 2, 196609, 3211286, 2, 196610, 3211305, 2, 196612, 3211306, 2, 196609, 3211307, 2, 196609, 3211308, 2, 196609, 3211309, 2, 196609, 3211310, 2, 262151, 3276819, 2, 131075, 3276846, 2, 131075 )

[node name="lifeCountLabel" parent="level_prueba/HUD/Control/MarginContainer/HBox1/Hbox2/lifeRect" index="0"]
custom_fonts/font = SubResource( 1 )

[node name="tucaCpuntLab" parent="level_prueba/HUD/Control/MarginContainer/HBox1/Hbox2/tucaRect" index="0"]
custom_fonts/font = SubResource( 2 )

[node name="scoreLabel" parent="level_prueba/HUD/Control/MarginContainer/HBox1/Hbox3" index="0"]
custom_fonts/font = SubResource( 3 )

[node name="scoreCountLabel" parent="level_prueba/HUD/Control/MarginContainer/HBox1/Hbox3" index="1"]
custom_fonts/font = SubResource( 4 )

[node name="Button" parent="level_prueba/HUD/Control" index="1"]
custom_fonts/font = SubResource( 5 )

[node name="enemies" parent="level_prueba" index="2"]
visible = false

[node name="enemy_espejo8" parent="level_prueba/enemies" index="5"]
position = Vector2( 411.667, 664.933 )

[node name="tucas" parent="level_prueba" index="3"]
visible = false

[node name="player_tile" parent="level_prueba" index="4"]
position = Vector2( 512.75, 691.261 )
maxLife = 5

[node name="CollisionShape2D" parent="level_prueba/player_tile" index="1"]
shape = SubResource( 6 )

[node name="AnimationPlayer" parent="level_prueba/player_tile" index="2"]
anims/attack = SubResource( 7 )
anims/idle_left = SubResource( 8 )
anims/idle_right = SubResource( 9 )
anims/jump_left = SubResource( 10 )
anims/jump_right = SubResource( 11 )
anims/move_left = SubResource( 12 )
anims/move_right = SubResource( 13 )
anims/sucked = SubResource( 14 )

[node name="CollisionShape2D" parent="level_prueba/player_tile/HurtBox" index="0"]
shape = SubResource( 15 )

[node name="CollisionShape2D" parent="level_prueba/player_tile/HitBox" index="0"]
position = Vector2( -1.47195, -17.0292 )
shape = SubResource( 16 )

[node name="player_start_pos" parent="level_prueba" index="5"]
position = Vector2( 622.219, 646.518 )

[node name="enemy_world" parent="level_prueba" index="6"]
position = Vector2( 514.387, -393.785 )

[node name="Timer" parent="level_prueba/enemy_world/ballShooter" index="0"]
wait_time = 0.5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="level_prueba/enemy_world" index="3"]

[node name="enemy_start_pos" parent="level_prueba" index="7"]
position = Vector2( 518.059, -380.309 )

[node name="Camera2D" parent="level_prueba" index="8"]
visible = false
position = Vector2( 512.75, 691.261 )

[connection signal="die" from="level_prueba/player_tile" to="." method="_on_player_tile_die"]
[connection signal="die" from="level_prueba/enemy_world" to="." method="_on_enemy_world_die"]

[editable path="level_prueba"]
[editable path="level_prueba/HUD"]
[editable path="level_prueba/player_tile"]
[editable path="level_prueba/player_tile/HurtBox"]
[editable path="level_prueba/player_tile/HitBox"]
[editable path="level_prueba/enemy_world"]
[editable path="level_prueba/enemy_world/ballShooter"]
